# EDRT

./: .gitignore  CLAUDE.md  README.md  TASK.md  pyproject.toml
analysis/: __init__.py  checkpoint_analysis.py  style.py  visualize.py  visualize_interactive.py
analysis/notebooks/: explore_checkpoint.ipynb  fsm_analysis.ipynb  tinystories_analysis.ipynb
configs/: tinystories_small.yaml  tinystories_tiny.yaml
docs/: ARCHITECTURE.md  CRYSTALLINE_RESULTS.md  QUICKSTART.md  results_summary.json
experiments/: toy_copy.py
experiments/fsm/: generate_data.py  run_fsm.py
experiments/tinystories/: __init__.py  run_tinystories.py
scripts/: generate_all.py  setup_repo.sh
src/: __init__.py  bottleneck.py  config.py  losses.py  model.py  utils.py
tests/: __init__.py  test_bottleneck.py  test_model.py
training/: __init__.py  checkpoint.py  data.py  eval.py  train.py
